# typhoidsim

./: .gitignore  .nojekyll  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  conduct.html  contributing.html  contributing.rst  index.html  objects.inv  objects.json  pyproject.toml  robots.txt  search.json  setup.py  sitemap.xml  tutorials.html  whatsnew.html
.github/ISSUE_TEMPLATE/: 1-bug-report-user.yml  2-bug-report-minimal.md  2-feature-request.yml  3-docs.yml  4-howto.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: publish_docs.yaml  test_docs.yaml  tests.yaml
api/: calibration.html  defaults.html  distributions.html  environment.html  immunity.html  index.html  ingest.html  interventions.html  monitors.html  networks.html  patterns.html  products.html  settings.html  typhoid.html  utils.html  utils_eligibility.html  utils_math.html  visualizers.html
docs/: .gitignore  README.md  _quarto.yml  _variables.yml  clean_all  conduct.qmd  contributing.qmd  index.qmd  quarto_utils.py  requirements.txt  tutorials.qmd
docs/assets/: styles-dark.scss  styles.css
docs/tutorials/: README.md  convert_notebooks  tut_calibration.ipynb  tut_calibration.qmd  tut_interventions.ipynb  tut_interventions.qmd  tut_intro.ipynb  tut_intro.qmd  tut_model_ingredients.ipynb  tut_model_ingredients.qmd  tut_transmission_environment.ipynb  tut_transmission_environment.qmd  tut_transmission_multi.ipynb  tut_transmission_multi.qmd  tut_transmission_network.ipynb  tut_transmission_network.qmd  tut_transmission_seasonality.ipynb  tut_transmission_seasonality.qmd  tut_vaccination.ipynb  tut_vaccination.qmd
examples/: parameter_sweep_multisim.py  parameter_sweep_optuna.py  parameter_sweep_tai.py
examples/calibration/: calibration_components.py  calibration_pakistan_sindh.py  calibration_pakistan_utils.py  calibration_workflows.py  data_utils.py  models.py  models_gof.py
migration/: README.md  compare_migrations.py  migrateWSubset_v1_v2.py  migrate_typhoidsim.py  migrate_typhoidsim_v1.py  migrate_v1-v2.py  migrate_v1-v2_tests.py  migrate_v1_v2.py
migration/gpt_migrated/: utils_eligibility.py
migration/gpt_migrated3/: demographics.py  environment.py  patterns.py  utils_math.py  visualizers.py
migration/gpt_migrated4/: patterns.py
migration/gpt_migrated5/: calibration.py  demographics.py  environment.py  interventions.py  monitors.py  networks.py  patterns.py  typhoid.py  utils.py
migration/migrated/: interventions.py  monitors.py  networks.py  typhoid.py  utils.py
migration/migrated_new1/: demographics.py  environment.py  patterns.py  typhoid.py
migration/migrated_new2/: demographics.py  environment.py  interventions.py  monitors.py  networks.py  patterns.py  typhoid.py  utils.py
migration/migrated_new_tests/: demographics.py  environment.py  interventions.py  monitors.py  networks.py  patterns.py  typhoid.py  utils.py
migration/migrated_new_tests2/: demographics.py  environment.py  interventions.py  monitors.py  networks.py  patterns.py  typhoid.py  utils.py
migration/original/: demographics.py  interventions.py  networks.py
migration/pre_migration/: environment.py
site_libs/bootstrap/: bootstrap-52748901a92be0f40b1b71967a65718b.min.css  bootstrap-dark-7b08722db7b8837b422d6b4de827e391.min.css
temp_migrate/: migrate_typhoidsim.py
temp_migrate/gpt_migrated/: environment.py  monitors.py  networks.py  patterns.py
temp_migrate/gpt_migrated2/: environment.py  utils_eligibility.py  utils_math.py
temp_migrate/gpt_migrated3/: defaults.py  interventions.py  monitors.py  typhoid.py  utils.py  utils_eligibility.py  version.py
temp_migrate/gpt_migrated4/: calibration.py  environment.py  interventions.py  networks.py  typhoid.py  utils.py
tests/: .coveragerc  baseline.json  benchmark.json  benchmark_full.py  benchmark_runs.sh  check_coverage  simple.py  test_baselines.py  test_calibration.py  test_disease.py  test_distributions.py  test_immunity.py  test_immunity_waning.py  test_interventions.py  test_monitors.py  test_sim_size.py
tests/dev_tests/: dist_people_age.py  param_prepatent_duration_distro.py  param_prepatent_duration_dose_function.py  param_prepatent_duration_function.py  param_prob_acute.py  (+18 more)
tutorials/: tut_calibration.html  tut_interventions.html  tut_intro.html  tut_model_ingredients.html  tut_transmission_environment.html  tut_transmission_multi.html  tut_transmission_network.html  tut_transmission_seasonality.html  tut_vaccination.html
typhoidsim/: __init__.py  analyzers.py  calibration.py  defaults.py  demographics.py  distributions.py  environment.py  gallstones.py  immunity.py  ingest.py  interventions.py  monitors.py  networks.py  patterns.py  products.py  propagation.py  settings.py  treatments.py  typhoid.py  utils.py  utils_eligibility.py  utils_math.py  vaccines.py  version.py  visualizers.py
(+29 files in other folders)
