[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "typhoidsim"
dynamic = ["version"]
description = "Agent-based model for typhoid simulations"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["typhoid", "typhoidsim", "calibration", "research", "starsim"]

authors = [
  { name = "Paula Sanz-Leon" },
  { name = "Kyra Grantz" },
  { name = "Cliff Kerr" }
]

classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sciris>=3.2.0",
    "starsim", # can't really specify version because we need rc2.3, but the version on that branch is still 2.2.1
    "numba",
    "scipy",
    "networkx",
    "matplotlib",
    "seaborn",
    "optuna"
]

[project.optional-dependencies]
test = ["pytest>=7.3", "pytest-cov", "pytest-env", "pytest-xdist"]
cloud = ["coiled", "dask", "distributed", "tornado", "cloudpickle", "msgpack", "optuna-integration[dask]"]



[tool.setuptools.packages.find]
where = ["."]
include = ["typhoidsim*"]

[tool.setuptools.package-data]
mypkg = ["*.ipynb", "*.rst", "data/**/*.csv"]

[tool.setuptools.dynamic]
version = {attr = "typhoidsim.version.__version__"}